--- a/elevator.cabal
+++ b/elevator.cabal
@@ -1,7 +1,7 @@
 name:                elevator
 version:             0.1
-synopsis:            Lift everything
--- description:         
+synopsis:            Immediately lifts to a desired level
+description:         This package provides 'elevate' function which composes 'lift'-like transformations automatically.
 homepage:            https://github.com/fumieval/elevator
 license:             BSD3
 license-file:        LICENSE
