--- a/elevator.cabal
+++ b/elevator.cabal
@@ -24,6 +24,6 @@ library
   exposed-modules:     Control.Elevator
   -- other-modules:
   other-extensions:    TypeOperators, FlexibleContexts, FlexibleInstances, ConstraintKinds, TypeFamilies, DataKinds
-  build-depends:       base == 4.*, transformers >= 0.3, extensible >= 0.2.6 && <0.3, either
+  build-depends:       base == 4.*, transformers >= 0.3, extensible >= 0.2.6 && <0.3
   hs-source-dirs:      src
   default-language:    Haskell2010
