--- a/elevator.cabal
+++ b/elevator.cabal
@@ -3,12 +3,13 @@ version:             0.2.0.1
 synopsis:            Immediately lifts to a desired level
 description:         This package provides 'elevate' function which composes 'lift'-like transformations automatically.
 homepage:            https://github.com/fumieval/elevator
+bug-reports:         https://github.com/fumieval/elevator/issues
 license:             BSD3
 license-file:        LICENSE
 author:              Fumiaki Kinoshita
 maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
-copyright:           Copyright (C) 2014 Fumiaki Kinoshita
-category:            Data
+copyright:           Copyright (C) 2015 Fumiaki Kinoshita
+category:            Control
 build-type:          Simple
 extra-source-files:
     CHANGELOG.md
@@ -22,8 +23,7 @@ source-repository head
 
 library
   exposed-modules:     Control.Elevator
-  -- other-modules:
   other-extensions:    TypeOperators, FlexibleContexts, FlexibleInstances, ConstraintKinds, TypeFamilies, DataKinds
-  build-depends:       base == 4.*, transformers >= 0.3, extensible >= 0.2.6 && <0.3
+  build-depends:       base >= 4.7 && <5, transformers >= 0.3 && <0.5, extensible >= 0.2.6 && <0.3
   hs-source-dirs:      src
   default-language:    Haskell2010
